2016-01-2016 Richard Grainger <grainger@gmail.com> - 1.0.0
* Initial 1.0.0 release