@@ -1,12 +1,12 @@
 {
   "name": "liger1978-mattermost",
-  "version": "0.1.0",
+  "version": "1.0.1",
   "author": "Richard Grainger",
   "summary": "Installs and configures Mattermost.",
   "license": "Apache-2.0",
-  "source": "https://github.com/liger1978/puppet-mattermost",
-  "project_page": "https://github.com/liger1978/puppet-mattermost",
-  "issues_url": "https://github.com/liger1978/puppet-mattermost/issues",
+  "source": "https://github.com/liger1978/mattermost",
+  "project_page": "https://github.com/liger1978/mattermost",
+  "issues_url": "https://github.com/liger1978/mattermost/issues",
   "dependencies": [
     {"name":"puppetlabs-stdlib","version_requirement":">= 1.0.0"},
     {"name":"nanliu-staging","version_requirement":">= 1.0.0 <2.0.0"}
